Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31608

MySQL.Data can not connect to MariaDB 11 due a collations with a NULL id.

    XMLWordPrintable

Details

    Description

      I am working with 11.0.2 and (varios clients, one of them is ) MySQL.Data.MySQLConnector.

      The new feature for multiple collations with NULL ID (MDEV-27009) broke the connector as you can see here:

      https://stackoverflow.com/questions/74060289/mysqlconnection-open-system-invalidcastexception-object-cannot-be-cast-from-d

      I know the problem is in the connector internals, but how I can disable the new collations to make the connection connect until they will fix it ?

      Thanks for a must-using product !

      https://i.stack.imgur.com/zGwvA.png

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              Moshe L Moshe L
              Votes:
              1 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.25d
                  3.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.